--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - GOOGLE_CLIENT_ID
       - GOOGLE_CLIENT_SECRET
       - SERVICE_ACCOUNT_CREDENTIAL_JSON
+      - ADMIN_USERS
+      - OREORE_API_KEY
     tty: true
     stdin_open: true
     ports:
